# NBA-MCP

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
init-db/: 01_schema.sql  02_load.sql  nba_dailyleaders_full.csv
src/: server.py
tests/: conftest.py  test_tools.py
