[project]
name = "mcp-nba-server"
version = "0.1.0"
description = "MCP server exposing the 2025-26 NBA daily leaders dataset"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.27.0",
    "asyncpg>=0.30.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]
